[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/World/Fader.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/World/UI/UIComponent.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/World/EnemiesSpawner.gd" type="Script" id=4]
[ext_resource path="res://Scenes/World/CanvasEffects.gd" type="Script" id=5]
[ext_resource path="res://Scenes/World/CameraController.gd" type="Script" id=6]
[ext_resource path="res://icon.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Enemies/BlackMage/BlackBoss.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/World/BossWorld.gd" type="Script" id=9]
[ext_resource path="res://Scenes/TileMap.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/BGM/PerituneMaterial_Havoc_loop.ogg" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 800, 32 )

[sub_resource type="Animation" id=2]
resource_name = "Flash"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1.87, 1 ),
"update": 0,
"values": [ Color( 0.835294, 0.835294, 0.8, 1 ), Color( 0.0784314, 0.0745098, 0.0745098, 1 ) ]
}

[node name="World" type="Node2D"]
script = ExtResource( 9 )

[node name="LevelInteractables" type="Node2D" parent="."]
visible = false

[node name="StaticBody2D" type="StaticBody2D" parent="LevelInteractables"]
position = Vector2( 603.43, 482.87 )
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelInteractables/StaticBody2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="LevelInteractables/StaticBody2D"]
scale = Vector2( 26.8459, 1 )
texture = ExtResource( 7 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 144.326, 411.595 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 460, 430 )
offset = Vector2( 200, -30 )
script = ExtResource( 6 )

[node name="Spells" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="BlackBoss" parent="Enemies" instance=ExtResource( 8 )]
position = Vector2( 1153.63, 374.664 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -38.369
autoplay = true

[node name="CanvasEffects" type="CanvasModulate" parent="."]
color = Color( 0.0784314, 0.0745098, 0.0745098, 1 )
script = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasEffects"]
anims/Flash = SubResource( 2 )

[node name="UI" parent="." instance=ExtResource( 3 )]

[node name="Fader" parent="." instance=ExtResource( 2 )]

[node name="TileMap" parent="." instance=ExtResource( 10 )]
z_index = -10
tile_data = PoolIntArray( 0, 0, 0, 2, 0, 0, 4, 0, 0, 6, 0, 0, 8, 0, 0, 10, 0, 0, 12, 0, 0, 14, 0, 0, 16, 0, 0, 18, 0, 0, 20, 0, 0, 22, 0, 0, 24, 0, 0, 26, 0, 0, 28, 0, 0, 30, 0, 0, 32, 0, 0, 34, 0, 0, 36, 0, 0, 38, 0, 0, 40, 0, 0, 131072, 0, 0, 131074, 0, 0, 131076, 0, 0, 131078, 0, 0, 131080, 0, 0, 131082, 0, 0, 131084, 0, 0, 131086, 0, 0, 131088, 0, 0, 131090, 0, 0, 131092, 0, 0, 131094, 0, 0, 131096, 0, 0, 131098, 0, 0, 131100, 0, 0, 131102, 0, 0, 131104, 0, 0, 131106, 0, 0, 131108, 0, 0, 131110, 0, 0, 131112, 0, 0, 262144, 0, 0, 262146, 0, 0, 262148, 0, 0, 262150, 0, 0, 262152, 0, 0, 262154, 0, 0, 262156, 0, 0, 262158, 0, 0, 262160, 0, 0, 262162, 0, 0, 262164, 0, 0, 262166, 0, 0, 262168, 0, 0, 262170, 0, 0, 262172, 0, 0, 262174, 0, 0, 262176, 0, 0, 262178, 0, 0, 262180, 0, 0, 262182, 0, 0, 262184, 0, 0, 393216, 0, 0, 393218, 0, 0, 393220, 0, 0, 393222, 3, 0, 393224, 3, 0, 393225, 2, 0, 393226, 0, 0, 393228, 0, 0, 393230, 0, 0, 393232, 0, 0, 393234, 0, 0, 393236, 0, 0, 393238, 0, 0, 393240, 0, 0, 393242, 0, 0, 393244, 0, 0, 393246, 2, 0, 393247, 3, 0, 393249, 3, 0, 393250, 0, 0, 393252, 0, 0, 393254, 0, 0, 393256, 0, 0, 458758, 1, 0, 458783, 1, 0, 524288, 0, 0, 524290, 0, 0, 524292, 0, 0, 524297, 2, 0, 524298, 0, 0, 524300, 0, 0, 524302, 0, 0, 524304, 0, 0, 524306, 0, 0, 524308, 0, 0, 524310, 0, 0, 524312, 0, 0, 524314, 0, 0, 524316, 0, 0, 524318, 2, 0, 524322, 0, 0, 524324, 0, 0, 524326, 0, 0, 524328, 0, 0, 655360, 0, 0, 655362, 0, 0, 655364, 0, 0, 655366, 0, 0, 655368, 0, 0, 655370, 0, 0, 655372, 0, 0, 655374, 0, 0, 655376, 0, 0, 655378, 0, 0, 655380, 0, 0, 655382, 0, 0, 655384, 0, 0, 655386, 0, 0, 655388, 0, 0, 655390, 0, 0, 655392, 0, 0, 655394, 0, 0, 655396, 0, 0, 655398, 0, 0, 655400, 0, 0, 786432, 0, 0, 786434, 0, 0, 786436, 0, 0, 786438, 0, 0, 786440, 0, 0, 786442, 0, 0, 786444, 0, 0, 786446, 0, 0, 786448, 0, 0, 786450, 0, 0, 786452, 0, 0, 786454, 0, 0, 786456, 0, 0, 786458, 0, 0, 786460, 0, 0, 786462, 0, 0, 786464, 0, 0, 786466, 0, 0, 786468, 0, 0, 786470, 0, 0, 786472, 0, 0, 917504, 4, 0, 917506, 4, 0, 917508, 4, 0, 917510, 4, 0, 917512, 4, 0, 917514, 4, 0, 917516, 4, 0, 917518, 4, 0, 917520, 4, 0, 917522, 4, 0, 917524, 4, 0, 917526, 4, 0, 917528, 4, 0, 917530, 4, 0, 917532, 4, 0, 917534, 4, 0, 917536, 4, 0, 917538, 4, 0, 917540, 4, 0, 917542, 4, 0, 917544, 4, 0, 983040, 0, 0, 983042, 0, 0, 983044, 0, 0, 983046, 0, 0, 983048, 0, 0, 983050, 0, 0, 983052, 0, 0, 983054, 0, 0, 983056, 0, 0, 983058, 0, 0, 983060, 0, 0, 983062, 0, 0, 983064, 0, 0, 983066, 0, 0, 983068, 0, 0, 983070, 0, 0, 983072, 0, 0, 983074, 0, 0, 983076, 0, 0, 983078, 0, 0, 983080, 0, 0, 1114112, 0, 0, 1114114, 0, 0, 1114116, 0, 0, 1114118, 0, 0, 1114120, 0, 0, 1114122, 0, 0, 1114124, 0, 0, 1114126, 0, 0, 1114128, 0, 0, 1114130, 0, 0, 1114132, 0, 0, 1114134, 0, 0, 1114136, 0, 0, 1114138, 0, 0, 1114140, 0, 0, 1114142, 0, 0, 1114144, 0, 0, 1114146, 0, 0, 1114148, 0, 0, 1114150, 0, 0, 1114152, 0, 0, 1245184, 0, 0, 1245186, 0, 0, 1245188, 0, 0, 1245190, 0, 0, 1245192, 0, 0, 1245194, 0, 0, 1245196, 0, 0, 1245198, 0, 0, 1245200, 0, 0, 1245202, 0, 0, 1245204, 0, 0, 1245206, 0, 0, 1245208, 0, 0, 1245210, 0, 0, 1245212, 0, 0, 1245214, 0, 0, 1245216, 0, 0, 1245218, 0, 0, 1245220, 0, 0, 1245222, 0, 0, 1245224, 0, 0, 1376256, 0, 0, 1376258, 0, 0, 1376260, 0, 0, 1376262, 0, 0, 1376264, 0, 0, 1376266, 0, 0, 1376268, 0, 0, 1376270, 0, 0, 1376272, 0, 0, 1376274, 0, 0, 1376276, 0, 0, 1376278, 0, 0, 1376280, 0, 0, 1376282, 0, 0, 1376284, 0, 0, 1376286, 0, 0, 1376288, 0, 0, 1376290, 0, 0, 1376292, 0, 0, 1376294, 0, 0, 1376296, 0, 0, 1507328, 0, 0, 1507330, 0, 0, 1507332, 0, 0, 1507334, 0, 0, 1507336, 0, 0, 1507338, 0, 0, 1507340, 0, 0, 1507342, 0, 0, 1507344, 0, 0, 1507346, 0, 0, 1507348, 0, 0, 1507350, 0, 0, 1507352, 0, 0, 1507354, 0, 0, 1507356, 0, 0, 1507358, 0, 0, 1507360, 0, 0, 1507362, 0, 0, 1507364, 0, 0, 1507366, 0, 0, 1507368, 0, 0 )

[node name="GenericTimer" type="Timer" parent="."]
